# data-centric-ai-lab

./: .gitignore  README.md  pyproject.toml
projects/data_generator/: example.py  generator.py  metrics.py  persistence.py  progress.py  schema.py  templates.py
projects/data_generator/tests/: conftest.py  test_generator.py  test_metrics.py  test_persistence.py  test_progress.py  test_schema.py
