[project]
name = "data-centric-ai-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Jiae Kim",email = "s.j.kim8773@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker (>=36.1.1,<37.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
